--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,41 @@ bin/*
 *.class
 
 *.class
+
+.settings/org.eclipse.core.resources.prefs
+
+.settings/org.eclipse.core.resources.prefs
+
+bin/classes/fr/esipe/game/escapeir/MenuActivity.class
+
+bin/classes/fr/esipe/game/ship/BodyContactListener.class
+
+bin/classes/fr/esipe/game/ship/Boss1.class
+
+*.class
+
+*.class
+
+*.class
+
+bin/classes/fr/esipe/game/ship/Boss2.class
+
+bin/classes/fr/esipe/game/ship/Boss3.class
+
+bin/classes/fr/esipe/game/ship/SpaceShip.class
+
+bin/classes/fr/esipe/game/ship/SpaceShipHigh.class
+
+bin/classes/fr/esipe/game/ship/SpaceShipHigh.class
+
+bin/classes/fr/esipe/game/ship/SpaceShipLow.class
+
+bin/classes/fr/esipe/game/ship/SpaceShipMiddle.class
+
+bin/classes/fr/esipe/game/util/Constant.class
+
+bin/classes/fr/esipe/game/util/XmlLoader.class
+
+bin/classes/fr/esipe/game/weapon/Weapon.class
+
+bin/classes/fr/esipe/game/weapon/Weapon.class
