--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,11 @@ bin/classes/fr/esipe/game/weapon/Weapon.class
 bin/classes/fr/esipe/game/weapon/Weapon.class
 
 project.properties
+
+bin/classes/fr/esipe/game/util/ParserXmlHandler.class
+
+bin/classes/fr/esipe/game/util/ParserXmlHandler.class
+
+bin/classes/fr/esipe/game/util/ParserXmlHandler.class
+
+bin/classes/fr/esipe/game/util/ParserXmlHandler.class
