--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,7 @@ bin/classes/fr/esipe/game/util/ParserXmlHandler.class
 bin/classes/fr/esipe/game/util/ParserXmlHandler.class
 
 bin/classes/fr/esipe/game/util/ParserXmlHandler.class
+
+bin/classes/fr/esipe/game/escapeir/Level.class
+
+bin/classes/fr/esipe/game/escapeir/Level.class
