--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,5 @@ bin/classes/fr/esipe/game/util/ParserXmlHandler.class
 bin/classes/fr/esipe/game/escapeir/Level.class
 
 bin/classes/fr/esipe/game/escapeir/Level.class
+
+bin/classes/fr/esipe/game/escapeir/Level.class
