project.properties corrected

--- a/project.properties
+++ b/project.properties
@@ -11,8 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-<<<<<<< HEAD
-target=android-17
-=======
 target=Google Inc.:Google APIs:17
->>>>>>> 9125bad1935c824fce228bb780c526eec27d3f04
+target=Google Inc.:Google APIs:17
