--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="fr.esipe.game.escapeir"
     android:versionCode="1"
     android:versionName="1.0" >
-
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
