--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,6 +33,14 @@
             
         </activity>
         <activity
+            android:name="fr.esipe.game.escapeir.MapBuilder"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+             >
+             
+            
+        </activity>
+        <activity
             android:name="fr.esipe.game.escapeir.MenuActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
