--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -51,6 +51,14 @@
             </intent-filter>
         </activity>
         
+        <activity
+            android:name="fr.esipe.game.escapeir.ExportActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" 
+            android:screenOrientation="portrait">
+
+        </activity>
+        
         <activity android:name="fr.esipe.game.escapeir.ImportActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
