--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -68,9 +68,11 @@
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.EDIT" />                
                 <category android:name="android.intent.category.DEFAULT" />
-                <data android:mimeType="*/*" />
-                <data android:pathPattern=".*\\.scir" />   
-
+	                <category android:name="android.intent.category.BROWSABLE" />
+				<data android:scheme="file" />                               
+			 	 <data android:mimeType="*/*" />
+			    <data android:pathPattern=".*\\.scir" /> 
+				<data android:host="*" />
             </intent-filter>
         </activity>
     </application>
